[tool.poetry]
name = "absolutely_nothing"
version = "1.0.0"
description = "A test module that does absolutely nothing."
authors = ["Zach Taira"]

[tool.poetry.dependencies]
python = "^3.7.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.782"
pylint = "^2.4.4"
pytest-cov = "^2.7.1"
reorder-python-imports = "^1.8.0"
safety = "^1.9.0"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
